# coding_platform

./: .gitignore  README.md  judge0_langs.py  main.py  pyproject.toml
coding_platform/djangotutorial/: settings.py
experiments/: test.py  test_all_languages.py  test_results.json
experiments/scripts/: judge0_test.py
frontend/: README.md  metadata.json  package-lock.json  package.json
frontend/src/: App.tsx  types.ts
frontend/src/components/: CodeEditor.tsx  Header.tsx  ProblemDescription.tsx  ProblemList.tsx  ResizableLayout.tsx  TestcasePanel.tsx
frontend/src/data/: languages.json  problems.ts
frontend/src/services/: backendService.ts
