[project]
name = "coding-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=6.0.2",
    "fastapi[standard]>=0.133.0",
    "judge0>=0.0.8",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
    "uvicorn>=0.41.0",
]
